[gd_scene load_steps=14 format=3 uid="uid://xiwgrq0vtpcu"]

[ext_resource type="Script" path="res://script/coconutPalmTree.gd" id="1_upvfe"]
[ext_resource type="Texture2D" uid="uid://q1etgbp31d5y" path="res://art/Items/Food/palmTree1.png" id="2_sqo4g"]
[ext_resource type="Texture2D" uid="uid://p2a6jaaxarae" path="res://art/Items/Food/palmTree2.png" id="3_0rg83"]
[ext_resource type="Texture2D" uid="uid://b1h5lohqb7x4" path="res://art/Items/Food/palmTree3.png" id="4_if2rv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6wbex"]
atlas = ExtResource("2_sqo4g")
region = Rect2(32, 0, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncods"]
atlas = ExtResource("3_0rg83")
region = Rect2(32, 0, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2onj"]
atlas = ExtResource("4_if2rv")
region = Rect2(32, 0, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4j8j"]
atlas = ExtResource("2_sqo4g")
region = Rect2(0, 0, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnung"]
atlas = ExtResource("3_0rg83")
region = Rect2(0, 0, 32, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y0s2"]
atlas = ExtResource("4_if2rv")
region = Rect2(0, 0, 32, 53)

[sub_resource type="SpriteFrames" id="SpriteFrames_lhgg7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wbex")
}],
"loop": true,
"name": &"coconuts",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncods")
}],
"loop": true,
"name": &"coconuts1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2onj")
}],
"loop": true,
"name": &"coconuts2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4j8j")
}],
"loop": true,
"name": &"noCoconuts",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnung")
}],
"loop": true,
"name": &"noCoconuts1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y0s2")
}],
"loop": true,
"name": &"noCoconuts2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aceyl"]
size = Vector2(32, 51.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixfh2"]
size = Vector2(16, 16)

[node name="coconutPalmTree" type="Node2D"]
script = ExtResource("1_upvfe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lhgg7")
animation = &"coconuts2"

[node name="interactionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionArea"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_aceyl")

[node name="growth_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 25)

[node name="Collision Box" type="Area2D" parent="."]

[node name="noEnter" type="CollisionShape2D" parent="Collision Box"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_ixfh2")

[connection signal="body_entered" from="interactionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interactionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="input_event" from="interactionArea" to="." method="_on_interaction_area_input_event"]
[connection signal="timeout" from="growth_Timer" to="." method="_on_growth_timer_timeout"]
